[project]
name = "bandit-doyle"
version = "0.1.0"
requires-python = ">= 3.11, <3.12"
dependencies = [ "rdkit>=2024.3.2,<2024.4", "gif>=23.3.0,<23.4", "pandas<2", "numpy<2", "scikit-learn", "scipy", "pyyaml", "matplotlib", "tqdm", "ipykernel>=6.29.5,<6.30", "seaborn>=0.13.2,<0.14"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
bandit-doyle = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
linux = "3.10"
libc = "2.17"

[tool.pixi.dependencies]

[tool.setuptools.packages]
find = {}

[tool.ruff.format]
quote-style = "single"
